# machine-vision

./: CMakeLists.txt  mvz.cpp  mvz.h  mvz_obj.cpp  mvz_obj.h  mvz_stb.cpp  mvz_stb.h
assets/shaders/: mesh.vert  mesh_color.frag  skybox.vert  skybox_color.frag
demo/: main.cpp  scene.mtl
